Add API calls to PBS and PVE version endpoints

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,9 @@
     "parserOptions": {
         "project": true
     },
+    "env": {
+        "node": true
+    },
     "rules": {
         "@typescript-eslint/consistent-type-imports": [
             "warn",
