--- a/package.json
+++ b/package.json
@@ -5,16 +5,27 @@
     "author": "Danielle Huisman <danielle@huisman.me>",
     "repository": "github:DanielleHuisman/proxmox-fingerprint-sync",
     "license": "MIT",
+    "type": "module",
     "scripts": {
         "lint": "eslint src",
-        "build": "tsc"
+        "build": "tsc",
+        "dev": "dotenv tsx src/index.ts"
+    },
+    "dependencies": {
+        "@t3-oss/env-core": "^0.7.1",
+        "cron": "^3.1.6",
+        "zod": "^3.22.4"
     },
     "devDependencies": {
         "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+        "@types/node": "^20.10.4",
         "@typescript-eslint/eslint-plugin": "^6.13.2",
         "@typescript-eslint/parser": "^6.13.2",
+        "dotenv-cli": "^7.3.0",
         "eslint": "^8.55.0",
         "prettier": "^3.1.0",
+        "ts-node": "^10.9.1",
+        "tsx": "^4.6.2",
         "typescript": "^5.3.3"
     }
 }
