--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,13 +4,18 @@ repos:
       hooks:
           - id: prettier
             additional_dependencies:
-                - prettier@^3.1.0
-                - '@trivago/prettier-plugin-sort-imports@^4.3.0'
+                - '@trivago/prettier-plugin-sort-imports@^5.0.0'
+                - prettier@^3.4.2
+                - prettier-plugin-sort-json@^4.1.1
+
     - repo: https://github.com/pre-commit/mirrors-eslint
-      rev: v8.56.0
+      rev: v9.26.0
       hooks:
           - id: eslint
+            types: [file]
+            types_or: [javascript, jsx, ts, tsx]
             additional_dependencies:
-                - eslint@^8.55.0
-                - '@typescript-eslint/eslint-plugin@^6.13.2'
-                - '@typescript-eslint/parser@^6.13.2'
+                - eslint@^9.15.0
+                - eslint-import-resolver-typescript@^3.6.3
+                - eslint-plugin-import@^2.31.0
+                - typescript-eslint@^8.16.0
