--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,26 @@
 {
+    "$schema": "https://json.schemastore.org/tsconfig.json",
     "compilerOptions": {
-        "target": "ES2020",
+        "allowImportingTsExtensions": false,
+        "allowJs": true,
+        "allowUnreachableCode": false,
+        "allowUnusedLabels": false,
+        "esModuleInterop": true,
+        "isolatedModules": true,
         "lib": ["ESNext"],
         "module": "NodeNext",
         "moduleResolution": "NodeNext",
-
-        "outDir": "dist",
-
-        "declaration": false,
-        "esModuleInterop": true,
-        "noImplicitAny": true,
-        "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
+        "noImplicitReturns": true,
+        "noUncheckedIndexedAccess": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
+        "outDir": "dist",
         "resolveJsonModule": true,
         "sourceMap": true,
-        "strict": true
-    }
+        "strict": true,
+        "target": "ES2022",
+        "verbatimModuleSyntax": true
+    },
+    "include": ["src/"]
 }
